Concretada funcionalidad de alta de movimientos para productos. Ajustes en enrutamiento general de la aplicación. Ajustes ligeros en el Layout principal y agregadas nuevas y próximas pantallas al menú de la aplicación.

--- a/QUICK_INVENTORY.Client/QUICK_INVENTORY.Client.csproj
+++ b/QUICK_INVENTORY.Client/QUICK_INVENTORY.Client.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\QUICK_INVENTORY.Shared\QUICK_INVENTORY.Shared.csproj" />
+    <ProjectReference Include="..\QUICK_INVENTORY.Shared\QUICK_INVENTORY.Shared.csproj" />
   </ItemGroup>
 
 </Project>
