--- a/QUICK_INVENTORY/QUICK_INVENTORY.csproj
+++ b/QUICK_INVENTORY/QUICK_INVENTORY.csproj
@@ -10,11 +10,13 @@
   <ItemGroup>
     <ProjectReference Include="..\QUICK_INVENTORY.Client\QUICK_INVENTORY.Client.csproj" />
     <ProjectReference Include="..\QUICK_INVENTORY.Shared\QUICK_INVENTORY.Shared.csproj" />
+    <PackageReference Include="MailKit" Version="4.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
 
   <ItemGroup>
